--- a/css/base.css
+++ b/css/base.css
@@ -4,9 +4,9 @@ html {
     height: 100%;
     background: #999; /* for non-css3 browsers */
 
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#cccccc'); /* for IE */
-    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ccc)); /* for webkit browsers */
-    background: -moz-linear-gradient(top,  #fff,  #ccc); /* for firefox 3.6+ */ 
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeefff', endColorstr='#bbbccc'); /* for IE */
+    background: -webkit-gradient(linear, left top, left bottom, from(#eef), to(#bbc)); /* for webkit browsers */
+    background: -moz-linear-gradient(top,  #eef,  #bbc); /* for firefox 3.6+ */ 
 }
 
 html, body {
@@ -21,6 +21,11 @@ html, body {
     background-color: white;
     float: left;
     margin-left: 15%;  /* This coincides with the width.  Must adjust by / 2. */
+
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    -moz-border-radius-topleft: 10px;
+    -moz-border-radius-topright: 10px;
 }
 
 #content {
@@ -35,13 +40,17 @@ html, body {
 }
 
 #header {
+    padding-top: 1%;
     width: 100%;
     float: left;
-    border: 2px solid rgb(233, 233, 233);
+    border: 2px solid rgb(233, 233, 244);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     -moz-border-radius-topleft: 10px;
     -moz-border-radius-topright: 10px;
+    -moz-box-shadow: 0px 5px 10px #ccc;
+    
+    box-shadow: inset 0px 5px 10px #ccc;
 }
 
 #icons {
