--- a/css/style.css
+++ b/css/style.css
@@ -191,18 +191,22 @@ html, body {
     background-color: white;
     float: left;
     margin-left: 15%;  /* This coincides with the width.  Must adjust by / 2. */
-
+    border: 2px solid rgb(233, 233, 244);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     -moz-border-radius-topleft: 10px;
     -moz-border-radius-topright: 10px;
+    -moz-box-shadow: 5px 0px 5px #ccc;
+    box-shadow: 5px 0px 5px #ccc;
 }
 
 #main {
     width: 100%;
-    margin-top: 2%;
+    background-color: white;
 
     margin-bottom: 2%;
+
+    height: 480px;
     float: left;
 }
 
@@ -215,14 +219,13 @@ header {
     padding-top: 1%;
     width: 100%;
     float: left;
-    border: 2px solid rgb(233, 233, 244);
+
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+
     -moz-border-radius-topleft: 10px;
     -moz-border-radius-topright: 10px;
-    -moz-box-shadow: 0px 5px 10px #ccc;
-    
-    box-shadow: inset 0px 5px 10px #ccc;
+    border-bottom: 1px solid rgb(230, 230, 255);
 }
 
 #icons {
