--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,25 @@ header {
     border-bottom: 1px solid rgb(230, 230, 255);
 }
 
+#left_panel {
+    width: 49%;
+    height: 480px;
+    border-right: 1px solid rgb(230, 230, 255);
+    float: left;
+    margin-left: 5%;
+}
+#right_panel {
+    width: 49%;
+    height: 480px;
+    float: left;
+}
+
+#profile_pic {
+    margin-top: 5%;
+    width: 250px;
+    height: 190px;
+}
+
 #icons {
     width: 100%;
     text-align: right;
