--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,6 @@ html, body {
 
 #container {
     width: 70%;
-    margin: auto;
     background-color: white;
     float: left;
     margin-left: 15%;  /* This coincides with the width.  Must adjust by / 2. */
@@ -225,6 +224,15 @@ html, body {
 	height: 480px;
 	padding-left: 3%;
 	padding-top:3%;
+}
+#skills {
+	padding: 3%;
+	font-size: 11px;
+}
+
+#skills2 {
+	padding: 3%;
+	font-size: 11px;
 }
 
 .back {
