Finished up some extra stuff

--- a/templates/page2.html
+++ b/templates/page2.html
@@ -24,3 +24,6 @@
 					- Configured printers, copiers, and desktops through sub-netted LAN networks<br/>
 					- Setup over 900 Lenovo laptops for said High School<br/>
 </p>
+<br />
+<br />
+<a id="back_btn" href="#"> << back</a>
