--- a/templates/facebox.html
+++ b/templates/facebox.html
@@ -7,6 +7,7 @@
 <li>Mootools</li>
 <li>Mootools Tooltips</li>
 <li><font color='8888ff'>Facebox</font></li>
+<li>HTML5BoilerPlate, by Paul Irish<li>
 <li><font color='ffaaaa'>Python</font></li>
 <li><font color='ff8888'>Google App Engine</fong></li>
 
