--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,12 @@ html, body {
     float: left;
 }
 
+#contact_div {
+    width: 100%;
+    float: left;
+    margin: auto;
+}
+
 
 #main {
     width: 100%;
