Updated my resume info

--- a/templates/page1.html
+++ b/templates/page1.html
@@ -1,3 +1,12 @@
+
+<p class="position">Software Developer 
+					<br/><span class="date">
+						February 2012 - Present
+					</span>
+				</p>
+				<p class="company">Offerpop</p>
+				<p class="job_desc">
+				</p>
 <p class="position">Web Developer Intern 
 					<br/><span class="date">
 						May 2011 - August 2011
